提交之前学习过的

--- a/Vue1.0_1/vue-01声明式渲染.html
+++ b/Vue1.0_1/vue-01声明式渲染.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>智能社——http://www.zhinengshe.com</title>
+    <title>祝啟辉vue学习笔记</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -11,30 +11,22 @@
     </style>
     <script src="vue.js"></script>
     <script>
+        var c = undefined;
         window.onload=function(){
-            new Vue({
+            c=new Vue({
                 el:'#box',
                 data:{
-
-                },
-                methods:{
-                    show:function(ev){
-                        alert(1);
-                        ev.cancelBubble=true;
-                    },
-                    show2:function(){
-                        alert(2);
-                    }
+                    msg:'welcome vue'
                 }
             });
         };
+
+        //在控制台输入  c.msg="zqh"  查看变化
     </script>
 </head>
 <body>
     <div id="box">
-        <div @click="show2()">
-            <input type="button" value="按钮" @click="show($event)">
-        </div>
+        {{msg}}
     </div>
 </body>
 </html>
