--- a/Vue1.0_1/vue-05Class.html
+++ b/Vue1.0_1/vue-05Class.html
@@ -2,33 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>智能社——http://www.zhinengshe.com</title>
+    <title>祝啟辉vue学习笔记</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <style>
-
+        .class1{
+            color: red;
+        }
+        .class2{
+            background: blue;
+        }
     </style>
     <script src="vue.js"></script>
     <script>
+        var c = undefined;
         window.onload=function(){
-            new Vue({
+            c=new Vue({
                 el:'#box',
                 data:{
-
+                    red:'class1',
+                    b:'class2'
                 },
                 methods:{
-                    show:function(){
-                        alert(1);
-                    }
                 }
             });
         };
+
     </script>
 </head>
 <body>
     <div id="box">
-        <input type="text" @keyup.left="show()">
+        <strong :class="[red,b]">文字...</strong>
+
+        <strong :class="[b]">文字...</strong>
+
+        <strong :class="red">文字...</strong>
+
+        <strong :class="{class1:true,class2:true}">文字...</strong>
     </div>
 </body>
 </html>
