--- a/Vue1.0_1/vue-02循环.html
+++ b/Vue1.0_1/vue-02循环.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>智能社——http://www.zhinengshe.com</title>
+    <title>祝啟辉vue学习笔记</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -11,29 +11,37 @@
     </style>
     <script src="vue.js"></script>
     <script>
+        var c = undefined;
         window.onload=function(){
-            new Vue({
+            c=new Vue({
                 el:'#box',
-                data:{ //数据
+                data:{
                     arr:['apple','banana','orange','pear'],
                     json:{a:'apple',b:'banana',c:'orange'}
-                },
-                methods:{
-                    add:function(){
-                        this.arr.push('tomato');
-                    }
                 }
             });
         };
+
     </script>
 </head>
 <body>
     <div id="box">
-        <input type="button" value="按钮" v-on:click="add()">
-        <br>
         <ul>
             <li v-for="value in arr">
-                {{value}}
+                {{value}}   {{$index}}
+            </li>
+        </ul>
+        <hr>
+        <ul>
+            <li v-for="value in json">
+                {{value}}   {{$index}}  {{$key}}
+            </li>
+        </ul>
+
+        <hr>
+        <ul>
+            <li v-for="(k,v) in json">
+                {{k}}   {{v}}   {{$index}}  {{$key}}
             </li>
         </ul>
     </div>
