--- a/Vue1.0_1/vue-03属性.html
+++ b/Vue1.0_1/vue-03属性.html
@@ -2,34 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>智能社——http://www.zhinengshe.com</title>
+    <title>祝啟辉vue学习笔记</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <style>
-        .red{
-            color: red;
-        }
-        .blue{
-            background: blue;
-        }
+
     </style>
     <script src="vue.js"></script>
     <script>
+        var c = undefined;
         window.onload=function(){
-            new Vue({
+            c=new Vue({
                 el:'#box',
                 data:{
+                    url:'https://www.baidu.com/img/bd_logo1.png',
+                    w:'200px',
+                    t:'这是一张美丽的图片'
                 },
                 methods:{
                 }
             });
         };
+
     </script>
 </head>
 <body>
     <div id="box">
-        <strong :class="{red:true,blue:true}">文字...</strong>
+        <!--<img src="{{url}}" alt="">-->
+        <img :src="url" alt="" :width="w" :title="t">
     </div>
 </body>
 </html>
