--- a/Vue1.0_1/vue-04模板.html
+++ b/Vue1.0_1/vue-04模板.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>智能社——http://www.zhinengshe.com</title>
+    <title>祝啟辉vue学习笔记</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -11,24 +11,27 @@
     </style>
     <script src="vue.js"></script>
     <script>
+        var c = undefined;
         window.onload=function(){
-            new Vue({
+            c=new Vue({
                 el:'#box',
                 data:{
-
-                },
-                methods:{
-                    show:function(){
-                        alert(1);
-                    }
+                    msg:'abc'
                 }
             });
         };
+
     </script>
 </head>
 <body>
     <div id="box">
-        <input type="text" @keydown="show">
+        <input type="text" v-model="msg">
+        <br>
+        {{msg}}
+        <br>
+        {{*msg}}
+        <br>
+        {{{msg}}}
     </div>
 </body>
 </html>
