--- a/Vue1.0_1/vue-07过滤器.html
+++ b/Vue1.0_1/vue-07过滤器.html
@@ -2,36 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>智能社——http://www.zhinengshe.com</title>
+    <title>祝啟辉vue学习笔记</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <style>
-        .red{
-            color: red;
-        }
-        .blue{
-            background: blue;
-        }
-    </style>
+
     <script src="vue.js"></script>
     <script>
+        var c = undefined;
         window.onload=function(){
-            new Vue({
+            c=new Vue({
                 el:'#box',
                 data:{
-                    c:{color:'red'},
-                    b:{backgroundColor:'blue'}
+
                 },
                 methods:{
                 }
             });
         };
+
     </script>
 </head>
 <body>
     <div id="box">
-        <strong :style="[c,b]">文字...</strong>
+        {{12|currency '￥'}}
+        <br>
+        {{12|currency}}
+        <br>
+        {{'welcome'|uppercase}}
+        <br>
+
+        {{'WELCOME'|lowercase}}
+        <br>
+        {{'WELCOME YOU'|lowercase|capitalize}}
     </div>
 </body>
 </html>
