--- a/Vue1.0_1/vue_zqh百度下拉列表.html
+++ b/Vue1.0_1/vue_zqh百度下拉列表.html
@@ -16,7 +16,7 @@
     <script>
         window.onload=function(){
             new Vue({
-                el:'body',
+                el:'#box',
                 data:{
                     myData:[],
                     t1:'',
@@ -24,27 +24,34 @@
                 },
                 methods:{
                     get:function(ev){
-                        if(ev.keyCode==38 || ev.keyCode==40)return;
+                        if(ev.keyCode == 38 || ev.keyCode == 40)return;
+
+                        if(ev.keyCode == 13){
+                            window.open('https://www.baidu.com/s?wd=' + this.t1);
+                            return;
+                        }
 
                         this.$http.jsonp('https://sp0.baidu.com/5a1Fazu8AA54nxGko9WTAnF6hhy/su',{
                             wd:this.t1
                         },{
                             jsonp:'cb'
                         }).then(function(res){
-                            this.myData=res.data.s;
-                        },function(){
-                            
+                            this.myData = res.data.s;
                         });
                     },
                     changeDown:function(){
                         this.now++;
-                        if(this.now==this.myData.length)this.now=-1;
-                        this.t1=this.myData[this.now];
+                        if(this.now==this.myData.length){
+                            this.now = -1;
+                        }
+                        this.t1 = this.myData[this.now];
                     },
                     changeUp:function(){
                         this.now--;
-                        if(this.now==-2)this.now=this.myData.length-1;
-                        this.t1=this.myData[this.now];
+                        if(this.now == -1){
+                            this.now = this.myData.length;
+                        }
+                        this.t1 = this.myData[this.now];
                     }
                 }
             });
@@ -53,7 +60,7 @@
 </head>
 <body>
     <div id="box">
-        <input type="text" v-model="t1" @keyup="get($event)" @keydown.down="changeDown()" @keydown.up.prevent="changeUp()">
+        <input type="text" v-model="t1" @keyup="get($event)" @keydown.down="changeDown()" @keydown.up="changeUp()">
         <ul>
             <li v-for="value in myData" :class="{gray:$index==now}">
                 {{value}}
