--- a/Vue1.0_1/vue_zqh简易留言板.html
+++ b/Vue1.0_1/vue_zqh简易留言板.html
@@ -15,23 +15,56 @@
 
     <script src="vue.js"></script>
     <script>
+        var c = undefined;
+        window.onload=function(){
+            c = new Vue({
+                el:'#box',
+                data:{
+                    myData:[],
+                    username:'',
+                    age:'',
+                    nowIndex:-100
+                },
+                methods:{
+                    add:function(){
+                        if(this.username == '' || this.age == ''){
+                            console.log("用户名和年龄不能为空！");
+                            return ;
+                        }
+                        this.myData.push({
+                            name:this.username,
+                            age:this.age
+                        });
 
+                        this.username='';
+                        this.age='';
+                    },
+                    deleteMsg:function(n){
+                        if(n<0){
+                            this.myData=[];
+                        }else{
+                            this.myData.splice(n,1);
+                        }
+                    }
+                }
+            });
+        }
     </script>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="box">
         <form role="form">
             <div class="form-group">
                 <label for="username">用户名:</label>
-                <input type="text" id="username" class="form-control" placeholder="输入用户名">
+                <input type="text" id="username" class="form-control" placeholder="输入用户名" v-model="username">
             </div>
             <div class="form-group">
                 <label for="age">年　龄:</label>
-                <input type="text" id="age" class="form-control" placeholder="输入年龄">
+                <input type="text" id="age" class="form-control" placeholder="输入年龄" v-model="age">
             </div>
             <div class="form-group">
-                <input type="button" value="添加" class="btn btn-primary">
-                <input type="button" value="重置" class="btn btn-danger">
+                <input type="button" value="添加" class="btn btn-primary" v-on:click="add()">
+                <input type="reset" value="重置" class="btn btn-danger">
             </div>
         </form>
         <hr>
@@ -43,28 +76,22 @@
                 <th class="text-center">年龄</th>
                 <th class="text-center">操作</th>
             </tr>
-            <tr class="text-center">
-                <td>1</td>
-                <td>blue</td>
-                <td>50</td>
+
+            <tr class="text-center" v-for="item in myData">
+                <td>{{$index+1}}</td>
+                <td>{{item.name}}</td>
+                <td>{{item.age}}</td>
                 <td>
-                    <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#layer">删除</button>
+                    <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#layer" v-on:click="nowIndex=$index">删除</button>
                 </td>
             </tr>
-            <tr class="text-center">
-                <td>1</td>
-                <td>strive</td>
-                <td>16</td>
-                <td>
-                    <button class="btn btn-primary btn-sm">删除</button>
-                </td>
-            </tr>
-            <tr>
+            
+            <tr v-show="myData.length!=0">
                 <td colspan="4" class="text-right">
-                    <button class="btn btn-danger btn-sm">删除全部</button>
+                    <button class="btn btn-danger btn-sm"data-target="#layer" data-toggle="modal" v-on:click="nowIndex=-2">删除全部</button>
                 </td>
             </tr>
-            <tr>
+            <tr v-show="myData.length==0">
                 <td colspan="4" class="text-center text-muted">
                     <p>暂无数据....</p>
                 </td>
@@ -83,7 +110,7 @@
                     </div>
                     <div class="modal-body text-right">
                         <button data-dismiss="modal" class="btn btn-primary btn-sm">取消</button>
-                        <button data-dismiss="modal" class="btn btn-danger btn-sm">确认</button>
+                        <button data-dismiss="modal" class="btn btn-danger btn-sm" v-on:click="deleteMsg(nowIndex)">确认</button>
                     </div>
                 </div>
             </div>
