--- a/Vue1.0_1/vue-08基础事件.html
+++ b/Vue1.0_1/vue-08基础事件.html
@@ -52,7 +52,7 @@
         <input type="button" value="remove" v-on:dblclick="remove()">
         <br>
         <ul>
-            <li v-for="value in arr">
+            <li v-for="value in arr" track-by="$index">
                 {{value}} {{$index}}
             </li>
         </ul>
