--- a/Vue1.0_1/07自定义指令3-元素指令.html
+++ b/Vue1.0_1/07自定义指令3-元素指令.html
@@ -7,27 +7,26 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <style>
-
+        zns-red{
+            width:100px;
+            background: gray;
+            height:100px;
+            display: block;
+        }
     </style>
     <script src="vue.js"></script>
     <script>
-        //ctrl->17
-        /*document.onkeydown=function(ev){
-            console.log(ev.keyCode);
-        };*/
-        Vue.directive('on').keyCodes.ctrl=17;  //
-
+        Vue.elementDirective('zns-red',{
+            bind:function(){
+                this.el.style.background='red';
+            }
+        });
 
         window.onload=function(){
             var vm=new Vue({
                 el:'#box',
                 data:{
                     a:'blue'
-                },
-                methods:{
-                    show:function(){
-                        alert(1);
-                    }
                 }
             });
         };
@@ -36,27 +35,8 @@
 </head>
 <body>
     <div id="box">
-        <input type="text" @keydown.ctrl="show">
+        <zns-red></zns-red>
     </div>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
