--- a/Vue2.0_2/vue.2.0-路由.html
+++ b/Vue2.0_2/vue.2.0-路由.html
@@ -7,16 +7,22 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <style>
-
+        .router-link-active{
+            font-size: 20px;
+            color:#f60;
+        }
     </style>
     <script src="vue.js"></script>
     <script src="bower_components/vue-router/dist/vue-router.min.js"></script>
 </head>
 <body>
+
     <div id="box">
+        <input type="button" value="添加一个路由home" @click="push">
+        <input type="button" value="替换一个路由user" @click="replace">
         <div>
             <router-link to="/home">主页</router-link>
-            <router-link to="/news">新闻</router-link>
+            <router-link to="/user">用户</router-link>
         </div>
         <div>
             <router-view></router-view>
@@ -24,19 +30,44 @@
     </div>
 
     <script>
+        
+
         //组件
         var Home={
             template:'<h3>我是主页</h3>'
         };
-        var News={
-            template:'<h3>我是新闻</h3>'
+        var User={
+            template:`
+                <div>
+                    <h3>我是用户信息</h3>
+                    <ul>
+                        <li><router-link to="/user/strive/10">Strive</router-link></li>
+                        <li><router-link to="/user/blue/80">Blue</router-link></li>
+                        <li><router-link to="/user/eric/70">Eric</router-link></li>
+                    </ul>
+                    <div>
+                        <router-view></router-view>
+                    </div>
+
+                </div>
+            `
+        };
+
+        var UserDetail = {
+            template:'<div>{{$route.params}}</div>'
         };
 
         //配置路由
         const routes=[
             {path:'/home', component:Home},
-            {path:'/news', component:News},
-            {path:'*', redirect:'/home'}
+            {
+                path:'/user',
+                component:User,
+                children:[
+                    {path:':username/:age',component:UserDetail}
+                ]
+            },
+            {path:'*', redirect:'/home'} //404
         ];
 
         //生成路由实例
@@ -48,7 +79,17 @@
         //最后挂到vue上
         new Vue({
             router,
-            el:'#box'
+            el:'#box',
+            methods:{
+                push(){
+                    //直接添加一个路由,表现切换路由，本质往历史记录里面添加一个
+                    router.push({path:'home'});
+                },
+                replace(){
+                    //替换路由，不会往历史记录里面添加
+                    router.replace({path:'user'});
+                }
+            }
         });
     </script>
 </body>
