--- a/Vue2.0_2/vue2.0-transition.html
+++ b/Vue2.0_2/vue2.0-transition.html
@@ -8,9 +8,31 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <style>
         p{
+            width:300px;
+            height:300px;
+            background: red;
+        }
+
+        .fade-enter-active, .fade-leave-active{
+            transition: 1s all ease;
+        }
+
+        .fade-enter-active{
+            opacity:1;
+            width:300px;
+            height:300px;
+        }
+
+        .fade-leave-active{
+            opacity:0;
             width:100px;
             height:100px;
-            background: red;
+        }
+
+        .fade-enter,.fade-leave{
+            opacity:0;
+            width:100px;
+            height:100px;
         }
     </style>
     <script src="vue.js"></script>
