--- a/Vue2.0_3/mint-zqh/index.html
+++ b/Vue2.0_3/mint-zqh/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>mint-demo</title>
+    <title>mint-zqh</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
   </head>
   <body>
