父子组件数据传递

--- a/Vue1.0_1/07自定义指令2-拖拽.html
+++ b/Vue1.0_1/07自定义指令2-拖拽.html
@@ -16,16 +16,19 @@
                 var disX=ev.clientX-oDiv.offsetLeft;
                 var disY=ev.clientY-oDiv.offsetTop;
 
-                document.onmousemove=function(ev){
-                    var l=ev.clientX-disX;
-                    var t=ev.clientY-disY;
-                    oDiv.style.left=l+'px';
-                    oDiv.style.top=t+'px';
-                };
-                document.onmouseup=function(){
-                    document.onmousemove=null;
-                    document.onmouseup=null;
-                };
+				console.log(disX + "--" + disY );
+                console.log(oDiv.offsetLeft + "--" + oDiv.offsetTop );
+                console.log(ev.clientX + "--" + ev.clientY );
+                // document.onmousemove=function(ev){
+                //     var l=ev.clientX-disX;
+                //     var t=ev.clientY-disY;
+                //     oDiv.style.left=l+'px';
+                //     oDiv.style.top=t+'px';
+                // };
+                // document.onmouseup=function(){
+                //     document.onmousemove=null;
+                //     document.onmouseup=null;
+                // };
             };
         });
 
