--- a/Vue1.0_3/vue父子组件5.html
+++ b/Vue1.0_3/vue父子组件5.html
@@ -35,7 +35,7 @@
 					components:{
 						'bbb':{
 							props:{
-								'm':String,
+								'mmm':String,
 								'myMsg':Number
 							},
 							template:'<h3>我是bbb组件->{{mmm}} <br> {{myMsg}}</h3>'
