--- a/Vue1.0_3/vue父子组件6.html
+++ b/Vue1.0_3/vue父子组件6.html
@@ -16,10 +16,11 @@
 	<template id="aaa">
 		<span>我是父级 -> {{msg}}</span>
 		<bbb @child-msg="get"></bbb>
+		<input type="button" value="修改msg" @click="set">
 	</template>
 	<template id="bbb">
-		<h3>子组件-</h3>
-		<input type="button" value="send" @click="send">
+		<h3>子组件-{{a}}</h3>
+		<input type="button" value="发送到父组件" @click="send">
 	</template>
 	<script>
 		var vm=new Vue({
@@ -40,7 +41,10 @@
 						get(msg){
 							// alert(msg);
 							this.msg=msg;
-						}
+						},
+                        set(){
+                            this.msg='jjjj';
+                        }
 					},
 					components:{
 						'bbb':{
