--- a/Vue2.0_1/2.0-父组件和子组件3.html
+++ b/Vue2.0_1/2.0-父组件和子组件3.html
@@ -45,6 +45,9 @@
     </template>
 
     <div id="box">
+        <h3>
+            注意在 JavaScript 中对象和数组是通过引用传入的，所以对于一个数组或对象类型的 prop 来说，在子组件中改变这个对象或数组本身将会影响到父组件的状态。
+        </h3>
         父级: ->{{giveData.a}}
         <br>
         <child-com :msg="giveData"></child-com>
